--- a/jupyter/my-rdd.ipynb
+++ b/jupyter/my-rdd.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RDD Review\n",
+    "# Assignment 4 - RDD Review\n",
     "We are reviewing some of the basic techniques for manipulating a RDD dataset."
    ]
   },
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Word Count Revisit\n",
+    "## Word Count Revisit for macbeth\n",
     "### Read in a text file"
    ]
   },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##seperate functions being run\n",
     "counts = text.flatMap(lambda line: line.translate(str.maketrans('', '', string.punctuation)).split(' '))\\\n",
     "             .map(lambda word: (word, 1))\\\n",
     "             .reduceByKey(lambda a, b: a + b)    "
@@ -92,32 +93,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run the search"
+    "### Run the search with the stripped functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 'purpose' occurs '5' times\n",
-      "715.     Shake my fell purpose, nor keep peace between\n",
-      "815.     We coursed him at the heels, and had a purpose\n",
-      "1258.     Infirm of purpose!\n",
-      "3141.     The flighty purpose never is o'ertook\n",
-      "3150.     This deed I'll do before this purpose cool.\n"
+      "Found 'spring' occurs '2' times\n",
+      "100.     So from that spring whence comfort seem'd to come\n",
+      "1566.     The spring, the head, the fountain of your blood\n"
      ]
     }
    ],
    "source": [
-    "word = \"purpose\"\n",
+    "word = \"spring\"\n",
     "for count in reduced.collect():\n",
     "    # kv = str(count).translate(str.maketrans('', '', string.punctuation)).split(' ')\n",
     "    kv = strip_punc(str(count))\n",
+    "    ##comparing different functions, and execute the search\n",
     "    if word == kv[0]:\n",
     "        print('Found \\'{}\\' occurs \\'{}\\' times'.format(kv[0], kv[1])) \n",
     "        search_word_in_line(word)\n",
